Remediate all SonarQube issues and security hotspots across the codebase